cattle-1.0 (1.2.1-1) unstable; urgency=low

  * New upstream release

  * Updated patches
    - D01-tweak-build-system.diff
      - Don't skip examples during build

  * Other
    - Enable +bindnow hardening option
    - Use HTTPS wherever possible
    - Update Standards-Version to 3.9.8
      - No changes needed

 -- Andrea Bolognani <eof@kiyuko.org>  Sat, 29 Oct 2016 00:09:30 +0200

cattle-1.0 (1.2.0-1) unstable; urgency=low

  * New upstream release.
  * Remove unneeded versioned Depends.
    - Closes: #734478 (please drop versioned Depends on pkg-config)
  * Bump Standards-Version to 3.9.6.
  * Upload to unstable.

 -- Andrea Bolognani <eof@kiyuko.org>  Wed, 22 Oct 2014 23:50:21 +0200

cattle-1.0 (1.0.1-1) experimental; urgency=low

  * Initial release. (Closes: #617304)
  * D01-tweak-build-system.diff:
    - avoid building example programs to speed up compilation.

 -- Andrea Bolognani <eof@kiyuko.org>  Sat, 11 Aug 2012 01:52:52 +0200