@@ -2,7 +2,7 @@ Source: cattle-1.0
 Section: libs
 Priority: optional
 Maintainer: Andrea Bolognani <eof@kiyuko.org>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 10),
                dh-exec,
                gtk-doc-tools,
                autoconf,
